# bevy-wgpu-demo

./: .gitignore  Cargo.toml
lib_async_component/: Cargo.toml
lib_async_component/src/: lib.rs
lib_chunk/: Cargo.toml
lib_chunk/src/: lib.rs
lib_first_person_camera/: Cargo.toml
lib_first_person_camera/src/: lib.rs
lib_noise/: Cargo.toml
lib_noise/src/: lib.rs
lib_render/: Cargo.toml
lib_render/src/: camera.rs  globals.rs  instance.rs  lib.rs  pipeline.rs  render_node.rs  texture.rs  vertex.rs
lib_render/src/shaders/: triangle.wgsl
lib_spatial/: Cargo.toml
lib_spatial/src/: lib.rs
lib_spatial_macro/: Cargo.toml
lib_spatial_macro/src/: lib.rs
lib_utils/: Cargo.toml
lib_utils/src/: lib.rs
src/: block.rs  debug_hud.rs  globals.rs  instance.rs  main.rs  mesh.rs  normal.rs  shader.wgsl  triangle.wgsl  vertex.rs  world_gen.rs
