[package]
name = "bevy-wgpu-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bytemuck = "1.23.2"
lib_chunk = { path = "./lib_chunk" }
lib_first_person_camera = { path = "./lib_first_person_camera" }
lib_spatial = { path = "./lib_spatial" }
lib_spatial_macro = { path = "./lib_spatial_macro" }
lib_utils = { path = "./lib_utils" }
lib_noise = { path = "./lib_noise" }
noise = "0.9.0"
iyes_perf_ui = "0.5.0"